# Conclave

./: .gitignore  AGENT.md  CLAUDE.md  README.md  chat-layout-prototype.html  start.sh
backend/: Cargo.toml
backend/.claude/agents/: frontend-streaming-debugger.md
backend/migrations/: 001_initial.sql  002_variants.sql  003_proposals.sql  004_sub_agents.sql  005_structured_events.sql  006_visibility.sql  007_session_status.sql  008_world_books.sql  009_concurrency_reliability.sql  010_character_cards.sql  011_presets.sql  012_agent_knowledge.sql  013_card_import.sql  014_app_settings.sql  015_agent_debug_snapshots.sql  016_session_variables.sql
backend/schemas/: agent-graph.schema.json  common.schema.json  content-pack-manifest.schema.json  context-bundle.schema.json  foreshadowing.schema.json  memory-event.schema.json  node-output.schema.json  session-config.schema.json  state-change-proposal.schema.json  trace.schema.json
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/importer/: action_extractor.rs  analyzer.rs  html_splitter.rs  js_analyzer.rs  json_parser.rs  llm_assist.rs  mod.rs  orchestrator.rs  package_builder.rs  png_parser.rs  regex_executor.rs  report.rs  resource_scanner.rs  state_adapter.rs  storage.rs  types.rs  variable_extractor.rs
backend/src/memory/: events.rs  foreshadowing.rs  mod.rs  state.rs  summaries.rs
backend/src/provider/: adapter.rs  mod.rs  openai.rs  thinking.rs  types.rs
backend/src/routes/: agents.rs  card_import.rs  charactercards.rs  health.rs  messages.rs  mod.rs  presets.rs  proposals.rs  providers.rs  (+6 more)
(+223 files in other folders)
