[package]
name = "conclave-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
async-stream = "0.3"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", default-features = false }
rand = "0.8"
base64 = "0.22"
dashmap = "6"
regex = "1"
sha2 = "0.10"
boa_engine = "0.20"
